--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ body {
 
     .foto__text {
         width: 100%;
+        text-align: center;
     }
 
     .aboutt {
@@ -233,22 +234,30 @@ body {
         margin-bottom: 600px;
     }
 
-    span{
+    span {
         display: none;
     }
 
-    .doing{
+    .doing {
         width: 311px;
+        margin-bottom: 40px;
     }
 
-    .interested__title{
+    .interested__title {
         flex-direction: column;
     }
 
+    .contact {
+        margin-bottom: 80px;
+    }
 }
 
 
 /* INTERESTED */
+
+#interested {
+    /* margin-bottom: 150px; */
+}
 
 .interested__title {
     display: flex;
@@ -277,3 +286,59 @@ span {
     line-height: 14px;
     color: #33323D;
 }
+
+
+/* FOOOTER */
+
+#footer {
+    margin-top: 150px;
+    background-color: #33323D;
+}
+
+.footer__menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__logo {
+    display: flex;
+    align-items: center;
+    padding: 24px 0px;
+}
+
+.footer__list {
+    display: flex;
+    list-style: none;
+    margin-left: 50px;
+    font-size: 12px;
+    color: #FFFFFF;
+}
+
+.footer__item{
+    margin-right: 42px;
+}
+
+.footer__icons{
+    font-size: 30px;
+    color: #fff;
+}
+
+@media screen and (max-width: 576px){
+    .footer__menu,
+    .footer__list,
+    .footer__logo{
+        flex-direction: column;
+    }
+
+    .footer__img{
+        margin-bottom: 40px;
+    }
+
+    .footer__item{
+        margin-bottom: 32px;
+    }
+
+}
+
+/* FOOTER */
